--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -25,3 +25,6 @@ personal-access-token.created.success.message.type=html
 personal-access-token.created.success.message.text=Personal Access Token <strong>{0}</strong> was created.
 personal-access-token.created.success.duration=PT8s
 personal-access-token.created.success.level=success
+sample-batch.deleted.success.message.type=html
+sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
+sample-batch.deleted.success.level=success
