--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -2,9 +2,12 @@
 ### Cancel Confirmation
 # Sometimes you want to support cancel confirmation for dialogs. You can choose to customize the
 # text shown in the cancel confirmation dialog.
+## (dialog-key).cancel-confirmation.title -> the title of the dialog
 ## (dialog-key).cancel-confirmation.message.type -> can be text or html. MUST BE PROVIDED
 ## (dialog-key).cancel-confirmation.message.text -> the text or html to display
 ## (dialog-key).cancel-confirmation.confirm-text -> the text on the button that confirms the cancel operation
+##############################
+
 project.create.cancel-confirmation.title=Discard new project creation?
 project.create.cancel-confirmation.message.type=text
 project.create.cancel-confirmation.message.text=You will lose all the information entered for this project.
