fix closing in AddExperimentDialog.java

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -16,3 +16,7 @@ project.create.cancel-confirmation.confirm-text=Discard project creation
 #sample-batch.edit.cancel-confirmation.message.type=TBD
 #sample-batch.edit.cancel-confirmation.message.text=TBD
 #sample-batch.edit.cancel-confirmation.confirm-text=TBD
+experiment.create.cancel-confirmation.title=Discard new experiment creation?
+experiment.create.cancel-confirmation.message.type=text
+experiment.create.cancel-confirmation.message.text=You will lose all the information entered for this experiment.
+experiment.create.cancel-confirmation.confirm-text=Discard experiment creation
