Fix closing of EditExperimentDialog.java

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -20,3 +20,7 @@ experiment.create.cancel-confirmation.title=Discard new experiment creation?
 experiment.create.cancel-confirmation.message.type=text
 experiment.create.cancel-confirmation.message.text=You will lose all the information entered for this experiment.
 experiment.create.cancel-confirmation.confirm-text=Discard experiment creation
+experiment.edit.cancel-confirmation.title=Discard experiment editing?
+experiment.edit.cancel-confirmation.message.type=text
+experiment.edit.cancel-confirmation.message.text=You abort the editing process for this experiment. All information entered will be lost..
+experiment.edit.cancel-confirmation.confirm-text=Discard experiment editing
