adjust EditProjectInformationDialog.java closing

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -12,6 +12,10 @@ project.create.cancel-confirmation.title=Discard new project creation?
 project.create.cancel-confirmation.message.type=text
 project.create.cancel-confirmation.message.text=You will lose all the information entered for this project.
 project.create.cancel-confirmation.confirm-text=Discard project creation
+project.edit.cancel-confirmation.title=Discard project changes?
+project.edit.cancel-confirmation.message.type=text
+project.edit.cancel-confirmation.message.text=You will lose all changes made to this project.
+project.edit.cancel-confirmation.confirm-text=Discard changes
 #sample-batch.edit.cancel-confirmation.title=TBD
 #sample-batch.edit.cancel-confirmation.message.type=TBD
 #sample-batch.edit.cancel-confirmation.message.text=TBD
@@ -20,7 +24,7 @@ experiment.create.cancel-confirmation.title=Discard new experiment creation?
 experiment.create.cancel-confirmation.message.type=text
 experiment.create.cancel-confirmation.message.text=You will lose all the information entered for this experiment.
 experiment.create.cancel-confirmation.confirm-text=Discard experiment creation
-experiment.edit.cancel-confirmation.title=Discard experiment editing?
+experiment.edit.cancel-confirmation.title=Discard experiment changes?
 experiment.edit.cancel-confirmation.message.type=text
-experiment.edit.cancel-confirmation.message.text=You abort the editing process for this experiment. All information entered will be lost..
-experiment.edit.cancel-confirmation.confirm-text=Discard experiment editing
+experiment.edit.cancel-confirmation.message.text=You will lose all changes made to this experiment.
+experiment.edit.cancel-confirmation.confirm-text=Discard changes
