use cancel confirmation on measurement upload dialog

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -28,3 +28,7 @@ experiment.edit.cancel-confirmation.title=Discard experiment changes?
 experiment.edit.cancel-confirmation.message.type=text
 experiment.edit.cancel-confirmation.message.text=You will lose all changes made to this experiment.
 experiment.edit.cancel-confirmation.confirm-text=Discard changes
+measurement.metadata.upload.cancel-confirmation.title=Discard uploaded information?
+measurement.metadata.upload.cancel-confirmation.message.type=text
+measurement.metadata.upload.cancel-confirmation.message.text=Uploaded information has not yet been saved.
+measurement.metadata.upload.cancel-confirmation.confirm-text=Discard upload
