add missing message

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -28,3 +28,6 @@ personal-access-token.created.success.level=success
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
+sample-batch.registered.success.message.type=html
+sample-batch.registered.success.message.text=Registered sample batch <strong>{0}</strong>.
+sample-batch.registered.success.level=success
