add cancel confirmation for experimental variables

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -28,6 +28,15 @@ experiment.edit.cancel-confirmation.title=Discard experiment changes?
 experiment.edit.cancel-confirmation.message.type=text
 experiment.edit.cancel-confirmation.message.text=You will lose all changes made to this experiment.
 experiment.edit.cancel-confirmation.confirm-text=Discard changes
+experiment.variables.create.cancel-confirmation.title=Discard new experimental variables?
+experiment.variables.create.cancel-confirmation.message.type=text
+experiment.variables.create.cancel-confirmation.message.text=No variables will be created and the information you entered will be lost.
+experiment.variables.create.cancel-confirmation.confirm-text=Do not create the variables
+experiment.variables.edit.cancel-confirmation.title=Discard experimental variable changes?
+experiment.variables.edit.cancel-confirmation.message.type=text
+experiment.variables.edit.cancel-confirmation.message.text=You will lose all changes made to the experimental variables.
+experiment.variables.edit.cancel-confirmation.confirm-text=Discard changes
+
 measurement.metadata.upload.cancel-confirmation.title=Discard uploaded information?
 measurement.metadata.upload.cancel-confirmation.message.type=text
 measurement.metadata.upload.cancel-confirmation.message.text=Uploaded information has not yet been saved.
