Add sample batch registration cancel confirmation

--- a/user-interface/src/main/resources/messages/dialog-messages.properties
+++ b/user-interface/src/main/resources/messages/dialog-messages.properties
@@ -16,10 +16,14 @@ project.edit.cancel-confirmation.title=Discard project changes?
 project.edit.cancel-confirmation.message.type=text
 project.edit.cancel-confirmation.message.text=You will lose all changes made to this project.
 project.edit.cancel-confirmation.confirm-text=Discard changes
-#sample-batch.edit.cancel-confirmation.title=TBD
-#sample-batch.edit.cancel-confirmation.message.type=TBD
-#sample-batch.edit.cancel-confirmation.message.text=TBD
-#sample-batch.edit.cancel-confirmation.confirm-text=TBD
+#sample-batch.register.cancel-confirmation.title=#TODO
+#sample-batch.register.cancel-confirmation.message.type=#TODO
+#sample-batch.register.cancel-confirmation.message.text=#TODO
+#sample-batch.register.cancel-confirmation.confirm-text=#TODO
+#sample-batch.edit.cancel-confirmation.title=#TODO
+#sample-batch.edit.cancel-confirmation.message.type=#TODO
+#sample-batch.edit.cancel-confirmation.message.text=#TODO
+#sample-batch.edit.cancel-confirmation.confirm-text=#TODO
 experiment.create.cancel-confirmation.title=Discard new experiment creation?
 experiment.create.cancel-confirmation.message.type=text
 experiment.create.cancel-confirmation.message.text=You will lose all the information entered for this experiment.
@@ -36,7 +40,6 @@ experiment.variables.edit.cancel-confirmation.title=Discard experimental variabl
 experiment.variables.edit.cancel-confirmation.message.type=text
 experiment.variables.edit.cancel-confirmation.message.text=You will lose all changes made to the experimental variables.
 experiment.variables.edit.cancel-confirmation.confirm-text=Discard changes
-
 measurement.metadata.upload.cancel-confirmation.title=Discard uploaded information?
 measurement.metadata.upload.cancel-confirmation.message.type=text
 measurement.metadata.upload.cancel-confirmation.message.text=Uploaded information has not yet been saved.
