Add edit functionality

--- a/user-interface/src/main/resources/messages/dialog-notifications.properties
+++ b/user-interface/src/main/resources/messages/dialog-notifications.properties
@@ -13,3 +13,8 @@ sample-batch.register.failure.level=error
 sample-batch.register.failure.message.type=text
 sample-batch.register.failure.message.text=We are sorry! The sample batch registration failed. Please try again.
 sample-batch.register.failure.confirm-text=Okay
+sample-batch.update.failure.title=Didn''t update sample batch.
+sample-batch.update.failure.level=error
+sample-batch.update.failure.message.type=text
+sample-batch.update.failure.message.text=We are sorry! The sample batch update failed. Please try again.
+sample-batch.update.failure.confirm-text=Okay
