--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -31,3 +31,6 @@ sample-batch.deleted.success.level=success
 sample-batch.registered.success.message.type=html
 sample-batch.registered.success.message.text=Registered sample batch <strong>{0}</strong>.
 sample-batch.registered.success.level=success
+sample-batch.updated.success.message.type=html
+sample-batch.updated.success.message.text=Updated sample batch <strong>{0}</strong>.
+sample-batch.updated.success.level=success
