--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -65,6 +65,9 @@ spring.mail.port=${MAIL_PORT:587}
 service.host.name=${DM_SERVICE_HOST:127.0.0.1}
 service.host.protocol=${DM_HOST_PROTOCOL:https}
 service.host.port=${DM_SERVICE_PORT:-1}
+# The path to an existing directory on the host's file system where
+# the application will create temporary directories, e.g. for preparing download assets
+service.host.temp.dir=${DM_TEMP_DIR:./tmp}
 ###############################################################################
 ################### OpenBis configuration #####################################
 openbis.user.name=${OPENBIS_USER_NAME:}
