--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -34,3 +34,6 @@ sample-batch.registered.success.level=success
 sample-batch.updated.success.message.type=html
 sample-batch.updated.success.message.text=Updated sample batch <strong>{0}</strong>.
 sample-batch.updated.success.level=success
+project.updated.success.message.type=html
+project.updated.success.message.text=Updated project <strong>{0}</strong> successfully.
+project.updated.success.level=success
