Ignore html template

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,2 @@
 sonar.organization=Quantitative Biology Center
-sonar.exclusions=src/test/**,build/**,node_modules/**, src/main/resources/**
+sonar.exclusions=src/test/**,build/**,node_modules/**, **/DataPrivacyAgreement.html, **/LegalNotice.html
