Add sonartype workflow

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,3 @@
-sonar.organization=Quantitative Biology Center
+sonar.projectKey=qbicsoftware_data-manager-app
+sonar.organization=qbicsoftware
 sonar.exclusions=src/test/**,build/**,node_modules/**, **/DataPrivacyAgreement.html, **/LegalNotice.html
