--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,11 @@
           <target>${maven.compiler.target}</target>
         </configuration>
       </plugin>
+        <plugin>
+          <groupId>org.sonarsource.scanner.maven</groupId>
+          <artifactId>sonar-maven-plugin</artifactId>
+          <version>5.0.0.4389</version>
+        </plugin>
     </plugins>
   </build>
 </project>
