Ensure sonar cloud execution on PR against main and development

--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -5,7 +5,10 @@ on:
   push:
     branches:
       - development
-
+  pull_request:
+    branches:
+      - development
+      - main
 jobs:
   sonarcloud:
     runs-on: ubuntu-latest
