--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -93,7 +93,7 @@ routing.password-reset.reset-parameter=${PASSWORD_RESET_PARAMETER:user-id}
 # route to project resource
 routing.projects.endpoint=/projects
 routing.projects.info.endpoint=/projects/%s/info
-routing.projects.samples.enpoint=/projects/%s/samples
+routing.projects.samples.enpoint=/projects/%s/experiments/%s/samples
 routing.registration.oidc.orcid.endpoint=/register/oidc
 routing.registration.error.pending-email-verification=/register/pending-email-confirmation
 ################## oauth provider ###########################
