--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,25 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>license-maven-plugin</artifactId>
+        <version>2.0.0</version> <!-- Use the latest version -->
+        <executions>
+          <execution>
+            <goals>
+              <goal>aggregate-add-third-party</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <!-- Configuration for licenses aggregation -->
+          <outputDirectory>${project.build.directory}/generated-sources/license</outputDirectory>
+          <thirdPartyFilename>THIRD-PARTY.txt</thirdPartyFilename>
+          <failIfWarning>false</failIfWarning> <!-- Optional: fail the build on issues -->
+          <includeTransitiveDependencies>true</includeTransitiveDependencies>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.gmavenplus</groupId>
         <artifactId>gmavenplus-plugin</artifactId>
         <version>4.0.1</version>
