Extend the notification factory

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -34,6 +34,12 @@ sample-batch.registered.success.level=success
 sample-batch.updated.success.message.type=html
 sample-batch.updated.success.message.text=Updated sample batch <strong>{0}</strong>.
 sample-batch.updated.success.level=success
+task.finished.message.type=html
+task.finished.message.text=<strong>{0}</strong> has finished.
+task.finished.level=success
+task.in-progress.message.type=html
+task.in-progress.message.text=<strong>{0}</strong> in progress ...
+task.in-progress.level=info
 project.updated.success.message.type=html
 project.updated.success.message.text=Updated project <strong>{0}</strong> successfully.
 project.updated.success.level=success
