--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -40,6 +40,9 @@ task.finished.level=success
 task.in-progress.message.type=html
 task.in-progress.message.text=<strong>{0}</strong> in progress ...
 task.in-progress.level=info
+task.failed.message.type=html
+task.failed.message.text=<strong>{0}</strong> failed!
+task.failed.level=error
 project.updated.success.message.type=html
 project.updated.success.message.text=Updated project <strong>{0}</strong> successfully.
 project.updated.success.level=success
