--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -178,3 +178,7 @@ spring.messages.basename=messages.error-messages, messages.toast-notifications, 
 # you always have to escape single quotes by another single quote ' -> ''
 # https://www.mscharhag.com/java/resource-bundle-single-quote-escaping for reference
 spring.messages.always-use-message-format=true
+#################### Orcid API calls #########################
+qbic.orcid.api.client.id=${ORCID_API_CLIENT_ID:}
+qbic.orcid.api.client.secret=${ORCID_API_CLIENT_SECRET:}
+qbic.orcid.api.endpoint.token=https://orcid.org/oauth/token
