--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -166,9 +166,9 @@ qbic.communication.contact.email=${CONTACT_EMAIL:support@qbic.zendesk.com}
 qbic.communication.contact.subject=${CONTACT_SUBJECT:Data Management Question}
 qbic.communication.api.url=${API_URL:https://download.qbic.uni-tuebingen.de/swagger-ui.html}
 ################# Terminology Service ########################################
-terminology.service.tib.endpoint.select=${TIB_SERVICE_API_SELECT_ENDPOINT:/ts4tib/api/select}
-terminology.service.tib.api.url=${TIB_SERVICE_API_URL:https://service.tib.eu}
-terminology.service.tib.endpoint.search=${TIB_SERVICE_API_SEARCH_ENDPOINT:/ts4tib/api/search}
+terminology.service.tib.endpoint.select=${TIB_SERVICE_API_SELECT_ENDPOINT:/api/select}
+terminology.service.tib.api.url=${TIB_SERVICE_API_URL:https://api.terminology.tib.eu}
+terminology.service.tib.endpoint.search=${TIB_SERVICE_API_SEARCH_ENDPOINT:/api/search}
 ###############################################################################
 ################### Message providers #########################################
 spring.messages.encoding=UTF-8
