--- a/user-interface/pom.xml
+++ b/user-interface/pom.xml
@@ -293,9 +293,17 @@
       <version>1.7.2</version>
       <scope>compile</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
     <dependency>
-      <groupId>com.vaadin</groupId>
-      <artifactId>vaadin-spreadsheet-flow</artifactId>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>5.4.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>5.4.0</version>
     </dependency>
     <dependency>
       <groupId>life.qbic.identity</groupId>
