Introduce secret vault and improve openBIS session handling (#1005)
* Fix issue with sample creation

For some reason the openbis server crashes the operation if the list of operations is unmodifiable. Switching to a modifiable ArrayList seems to solve the issue.

Co-authored-by: Sven F. <sven1103@users.noreply.github.com>

* Provide DataManagerVault

* Add JDs

* Add readme

* Change test secret to doc secret

* Implement DisposableBean interface for vault

* Ignore local PKCS12 stores

* Refactor session handling

* Checkin work

* JDs

* Execute operations asyncronously to avoid deadlocks

* Apply JDs

* Fix readme

* Introduce retry for operations

* Add debug statement

* Switch back to Synchrounous execution

* Enhance logs

* Improve retry

* Put debug log to the start

* Move property descriptions

* Update README.md

Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>

---------

Co-authored-by: KochTobi <kochtobi@users.noreply.github.com>
Co-authored-by: Sven F. <sven1103@users.noreply.github.com>
Co-authored-by: Tobias Koch <tobias.koch@qbic.uni-tuebingen.de>

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -2,6 +2,10 @@
 ################### Logging ###################################################
 logging.level.org.atmosphere=warn
 ###############################################################################
+################### Security ##################################################
+qbic.security.vault.key.env=DATAMANAGER_VAULT_KEY
+qbic.security.vault.path=${DATAMANAGER_VAULT_PATH:keystore.p12}
+qbic.security.vault.entry.password.env=DATAMANAGER_VAULT_ENTRY_PASSWORD
 ################### Datasources ###############################################
 # Using Spring (Boot), you can provide multiple datasources. Each datasource
 # can be configured by properties in this file.
