Display toasts in case of project creation

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -25,6 +25,15 @@ personal-access-token.created.success.message.type=html
 personal-access-token.created.success.message.text=Personal Access Token <strong>{0}</strong> was created.
 personal-access-token.created.success.duration=PT8s
 personal-access-token.created.success.level=success
+project.created.success.message.type=html
+project.created.success.message.text=New project <strong>{0}</strong> created.
+project.created.success.level=success
+project.created.error.message.type=html
+project.created.error.message.text=Project creation failed, please contact the <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+project.created.error.level=error
+experiment.created.error.message.type=html
+experiment.created.error.message.text=Experiment creation failed, please contact the <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+experiment.created.error.level=error
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
