Provide project design update as example

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -53,5 +53,5 @@ task.failed.message.type=html
 task.failed.message.text=<strong>{0}</strong> failed!
 task.failed.level=error
 project.updated.success.message.type=html
-project.updated.success.message.text=Updated project <strong>{0}</strong> successfully.
+project.updated.success.message.text=Updated project successfully.
 project.updated.success.level=success
