Capture access denied

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -61,3 +61,6 @@ project.updated.error.level=error
 project.updated.error.retry.message.type=html
 project.updated.error.retry.message.text=Update was unsuccessful. You might <a href="{0}">try it again</a>.
 project.updated.error.retry.message.level=error
+access.denied.message.type=html
+access.denied.message.text=Insufficient rights, request has failed.
+access.denied.level=error
