--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -53,5 +53,14 @@ task.failed.message.type=html
 task.failed.message.text=<strong>{0}</strong> failed!
 task.failed.level=error
 project.updated.success.message.type=html
-project.updated.success.message.text=Updated project <strong>{0}</strong> successfully.
+project.updated.success.message.text=Updated project successfully.
 project.updated.success.level=success
+project.updated.error.message.type=html
+project.updated.error.message.text=Project update has failed, please contact the <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+project.updated.error.level=error
+project.updated.error.retry.message.type=html
+project.updated.error.retry.message.text=Update was unsuccessful. You might <a href="{0}">try it again</a>.
+project.updated.error.retry.message.level=error
+access.denied.message.type=html
+access.denied.message.text=Insufficient rights, request has failed.
+access.denied.level=error
