--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -185,4 +185,4 @@ spring.messages.always-use-message-format=true
 #################### Orcid API calls #########################
 qbic.orcid.api.client.id=${ORCID_API_CLIENT_ID:}
 qbic.orcid.api.client.secret=${ORCID_API_CLIENT_SECRET:}
-qbic.orcid.api.endpoint.token=https://orcid.org/oauth/token
+qbic.orcid.api.endpoint.token=${ORCID_TOKEN_URI:}
