Fix logging to account for application.properties

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 # See https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html for reference
 ################### Logging ###################################################
-logging.level.org.atmosphere=warn
+logging.level.root=info
+logging.level.org.springframework.security=info
+logging.level.life.qbic=${DM_LOG_LEVEL:info}
+logging.level.life.qbic.datamanager=${DM_LOG_LEVEL:info}
+logging.level.life.qbic.projectmanagement.application.authorization.acl=info
+logging.file.path=${DM_LOG_PATH:-./logs}
 ###############################################################################
 ################### Security ##################################################
 qbic.security.vault.key.env=DATAMANAGER_VAULT_KEY
@@ -111,7 +116,6 @@ spring.security.oauth2.client.provider.orcid.authorization-uri=${ORCID_AUTHORIZA
 spring.security.oauth2.client.provider.orcid.token-uri=${ORCID_TOKEN_URI:https://sandbox.orcid.org/oauth/token}
 spring.security.oauth2.client.provider.orcid.user-info-uri=${ORCID_USERINFO_URI:https://sandbox.orcid.org/oauth/userinfo}
 spring.security.oauth2.client.provider.orcid.jwk-set-uri=${ORCID_JWK_SET_URI:https://sandbox.orcid.org/oauth/jwks}
-#logging.level.org.springframework.security.web=DEBUG
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
