Add tests for update ProjectDesign

--- a/project-management/pom.xml
+++ b/project-management/pom.xml
@@ -35,6 +35,12 @@
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-test -->
+    <dependency>
+      <groupId>io.projectreactor</groupId>
+      <artifactId>reactor-test</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
