Move default log path to relative path
Co-authored-by: Sven F. <9976560+sven1103@users.noreply.github.com>

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.level.org.springframework.security=info
 logging.level.life.qbic=${DM_LOG_LEVEL:info}
 logging.level.life.qbic.datamanager=${DM_LOG_LEVEL:info}
 logging.level.life.qbic.projectmanagement.application.authorization.acl=info
-logging.file.path=${DM_LOG_PATH:-./logs}
+logging.file.path=${DM_LOG_PATH:./logs}
 ###############################################################################
 ################### Security ##################################################
 qbic.security.vault.key.env=DATAMANAGER_VAULT_KEY
