Implement first API

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -64,3 +64,6 @@ project.updated.error.retry.message.level=error
 access.denied.message.type=html
 access.denied.message.text=Insufficient rights, request has failed.
 access.denied.level=error
+sample.query.failed.message.type=html
+sample.query.failed.message.text=Could not fetch sample information, please contact the <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+sample.query.failed.level=error
