Apply security context

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.root=info
 logging.level.org.springframework.security=info
 logging.level.life.qbic=${DM_LOG_LEVEL:info}
 logging.level.life.qbic.datamanager=${DM_LOG_LEVEL:info}
-logging.level.life.qbic.projectmanagement.application.authorization.acl=info
+logging.level.life.qbic.projectmanagement.application.authorization.acl=debug
 logging.file.path=${DM_LOG_PATH:./logs}
 ###############################################################################
 ################### Security ##################################################
