Move Orcid search authentication properties to application.properties for easier configuration down the line

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -121,6 +121,8 @@ qbic.external-service.person-search.orcid.client-id=${ORCID_SEARCH_CLIENT_ID:${s
 qbic.external-service.person-search.orcid.client-secret=${ORCID_SEARCH_CLIENT_SECRET:${spring.security.oauth2.client.registration.orcid.client-secret}}
 qbic.external-service.person-search.orcid.token-uri=${ORCID_SEARCH_TOKEN_URI:${spring.security.oauth2.client.provider.orcid.token-uri}}
 qbic.external-service.person-search.orcid.extended-search-uri=${qbic.external-service.person-search.orcid.base-uri}${ORCID_SEARCH_ENDPOINT:/expanded-search/?start=%s&rows=%s&q=%s}
+qbic.external-service.person-search.orcid.scope=/read-public
+qbic.external-service.person-search.orcid.grant-type=client_credentials
 
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
