--- a/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/user-interface/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -179,6 +179,11 @@
       "name": "qbic.security.vault.entry.password.env",
       "type": "java.lang.String",
       "description": "The password used for encrypting entries in the vault. Must be longer than 20 characters."
+    },
+    {
+      "name": "qbic.external-service.person-search.orcid.issuer",
+      "type": "java.lang.String",
+      "description": "The URL of the orcid issuer. Most probably https://orcid.org"
     }
   ]
 }
