--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -123,6 +123,7 @@ qbic.external-service.person-search.orcid.token-uri=${ORCID_SEARCH_TOKEN_URI:${s
 qbic.external-service.person-search.orcid.extended-search-uri=${qbic.external-service.person-search.orcid.base-uri}${ORCID_SEARCH_ENDPOINT:/expanded-search}
 qbic.external-service.person-search.orcid.scope=/read-public
 qbic.external-service.person-search.orcid.grant-type=client_credentials
+qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
 
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
