Integrate the public Orcid API to simplify person lookup for project-affiliated contacts (#986)
* Enable Orcid authentication for search

* Implement lookup for Orcid person entries

* Rewrite collaboratorlayout to not use the outdated autocompletefield

* Add oidc and oidcissuer to contact within application and domain

* OrcidRepository returns Contact instead of PersonEntry and adapt query link to sandbox during development.
Finally ensure that edge cases are handled (Exception handling, wild card searches etc.)

* Fix Missing commit

* Project contacts contain oidc and oidc issuer

* Remove unused AutocompleteContactField.java and update ContactField to contain Oidc and OidcIssuer

* Introduce PersonLookupService to Parse Orcid Information and have boundary between application and domain

* Adress remnants of contact refactor

* Enable specification of orcid API endpoint token to switch to sandbox orcid during testing if necessary

* Show Orcid in projectsummary

* Handle incomplete records provided by repository

* Call correct dialog css classes

* fix dialog css class

* Ensure that the orcid is overwritten if manual input is provided

* Also enable the storage of the oidc information of the myself contact during the edit case

* fix merge conflict

* Adapt contact object within test to account for new constructor

* Move Regex matching to Service Layer

* Address sonarcloud issues and reintroduce OrcidEntry to seperate contact information properly

* Provide proper checkbox logic

* Address outstanding sonarcloud issues

* Account fur null and empty values within oidc and oidc issuer in project summary

* Overhaul to new UI draft from SP  while taking into account all edge cases introduced

* Address Sonarcloud review

* Fix Value Setting Logic to ensure no contact overlap an happen

* Update error message

* Fix UI

* Simplify PresentationValue Logic within ContactField
Co-authored-by: KochTobi <kochtobi@users.noreply.github.com>

* Provide empty method wit

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -116,6 +116,15 @@ spring.security.oauth2.client.provider.orcid.authorization-uri=${ORCID_AUTHORIZA
 spring.security.oauth2.client.provider.orcid.token-uri=${ORCID_TOKEN_URI:https://sandbox.orcid.org/oauth/token}
 spring.security.oauth2.client.provider.orcid.user-info-uri=${ORCID_USERINFO_URI:https://sandbox.orcid.org/oauth/userinfo}
 spring.security.oauth2.client.provider.orcid.jwk-set-uri=${ORCID_JWK_SET_URI:https://sandbox.orcid.org/oauth/jwks}
+qbic.external-service.person-search.orcid.base-uri=${ORCID_SEARCH_API_URI:https://pub.sandbox.orcid.org/v3.0}
+qbic.external-service.person-search.orcid.client-id=${ORCID_SEARCH_CLIENT_ID:${spring.security.oauth2.client.registration.orcid.client-id}}
+qbic.external-service.person-search.orcid.client-secret=${ORCID_SEARCH_CLIENT_SECRET:${spring.security.oauth2.client.registration.orcid.client-secret}}
+qbic.external-service.person-search.orcid.token-uri=${ORCID_SEARCH_TOKEN_URI:${spring.security.oauth2.client.provider.orcid.token-uri}}
+qbic.external-service.person-search.orcid.extended-search-uri=${qbic.external-service.person-search.orcid.base-uri}${ORCID_SEARCH_ENDPOINT:/expanded-search}
+qbic.external-service.person-search.orcid.scope=/read-public
+qbic.external-service.person-search.orcid.grant-type=client_credentials
+qbic.external-service.person-search.orcid.issuer=${ORCID_SEARCH_ISSUER_URL:https://orcid.org}
+
 ###############################################################################
 ################### ActiveMQ Artemis ##########################################
 # ActiveMQ Artemis is used as a global message broker handling
