--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -34,6 +34,12 @@ project.created.error.level=error
 experiment.created.error.message.type=html
 experiment.created.error.message.text=Experiment creation failed, please contact the <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
 experiment.created.error.level=error
+experimental.groups.created.success.type=html
+experimental.groups.created.success.text=New groups have been created.
+experimental.groups.created.success.level=success
+experimental.groups.created.failed.type=html
+experimental.groups.created.failed.text=Apologies, something went wrong.
+experimental.groups.created.failed.level=error
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
