Address change requests

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -55,8 +55,8 @@ experimental.groups.deleted.failed.level=error
 measurement.upload.failed.message.type=html
 measurement.upload.failed.message.text=Apologies, something went wrong during the upload. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
 measurement.upload.failed.level=error
-measurement.upload.failed.reason.message.type=html
-measurement.upload.failed.reason.message.text="Apologies, the upload failed. Reason: <strong>{0}</strong>.
+measurement.upload.failed.unsupported-file-type.message.type=html
+measurement.upload.failed.unsupported-file-type.message.text="File type is currently not supported.
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
