--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -56,7 +56,16 @@ measurement.upload.failed.message.type=html
 measurement.upload.failed.message.text=Apologies, something went wrong during the upload. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
 measurement.upload.failed.level=error
 measurement.upload.failed.unsupported-file-type.message.type=html
-measurement.upload.failed.unsupported-file-type.message.text="File type is currently not supported.
+measurement.upload.failed.unsupported-file-type.message.text=File type is currently not supported.
+measurement.registration.in-progress.message.type=html
+measurement.registration.in-progress.message.text=Registering measurements
+measurement.registration.in-progress.level=success
+measurement.registration.failed.message.type=html
+measurement.registration.failed.message.text=Apologies, the registration failed. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+measurement.registration.failed.level=error
+measurement.registration.successful.message.type=html
+measurement.registration.successful.message.text=Measurement registration successful
+measurement.registration.successful.level=success
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
