Enable proteomics measurement registration

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -61,10 +61,10 @@ measurement.registration.in-progress.message.type=html
 measurement.registration.in-progress.message.text=Registering measurements
 measurement.registration.in-progress.level=success
 measurement.registration.failed.message.type=html
-measurement.registration.failed.message.text=Apologies, the registration failed. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+measurement.registration.failed.message.text=Apologies, some registrations failed <strong>({0})</strong>. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
 measurement.registration.failed.level=error
 measurement.registration.successful.message.type=html
-measurement.registration.successful.message.text=Measurement registration successful
+measurement.registration.successful.message.text=Measurement registration successful <strong>({0})</strong>
 measurement.registration.successful.level=success
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
