--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -66,6 +66,12 @@ measurement.registration.failed.level=error
 measurement.registration.successful.message.type=html
 measurement.registration.successful.message.text=Measurement registration successful <strong>({0})</strong>
 measurement.registration.successful.level=success
+measurement.no-measurements-selected.message.type=html
+measurement.no-measurements-selected.message.text=Please make a choice first.
+measurement.no-measurements-selected.level=info
+measurement.preparing-download.message.type=html
+measurement.preparing-download.message.text=Collecting information, this might take a moment
+measurement.preparing-download.level=info
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
