--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -72,6 +72,15 @@ measurement.no-measurements-selected.level=info
 measurement.preparing-download.message.type=html
 measurement.preparing-download.message.text=Collecting information, this might take a moment
 measurement.preparing-download.level=info
+measurement.update.successful.message.type=html
+measurement.update.successful.message.text=Measurement registration successful <strong>({0})</strong>
+measurement.update.successful.level=success
+measurement.update.failed.message.type=html
+measurement.update.failed.message.text=Apologies, some updates failed <strong>({0})</strong>. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+measurement.update.failed.level=error
+measurement.update.in-progress.message.type=html
+measurement.update.in-progress.message.text=Updating measurements...
+measurement.update.in-progress.level=info
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
