--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -67,13 +67,13 @@ measurement.registration.successful.message.type=html
 measurement.registration.successful.message.text=Measurement registration successful <strong>({0})</strong>
 measurement.registration.successful.level=success
 measurement.no-measurements-selected.message.type=html
-measurement.no-measurements-selected.message.text=Please make a choice first.
+measurement.no-measurements-selected.message.text=No measurements selected. Please select measurements before proceeding.
 measurement.no-measurements-selected.level=info
 measurement.preparing-download.message.type=html
 measurement.preparing-download.message.text=Collecting information, this might take a moment
 measurement.preparing-download.level=info
 measurement.update.successful.message.type=html
-measurement.update.successful.message.text=Measurement registration successful <strong>({0})</strong>
+measurement.update.successful.message.text=Successfully updated <strong>({0})</strong> measurements
 measurement.update.successful.level=success
 measurement.update.failed.message.type=html
 measurement.update.failed.message.text=Apologies, some updates failed <strong>({0})</strong>. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
