--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -66,6 +66,21 @@ measurement.registration.failed.level=error
 measurement.registration.successful.message.type=html
 measurement.registration.successful.message.text=Measurement registration successful <strong>({0})</strong>
 measurement.registration.successful.level=success
+measurement.no-measurements-selected.message.type=html
+measurement.no-measurements-selected.message.text=No measurements selected. Please select measurements before proceeding.
+measurement.no-measurements-selected.level=info
+measurement.preparing-download.message.type=html
+measurement.preparing-download.message.text=Collecting information, this might take a moment
+measurement.preparing-download.level=info
+measurement.update.successful.message.type=html
+measurement.update.successful.message.text=Successfully updated <strong>({0})</strong> measurements
+measurement.update.successful.level=success
+measurement.update.failed.message.type=html
+measurement.update.failed.message.text=Apologies, some updates failed <strong>({0})</strong>. Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
+measurement.update.failed.level=error
+measurement.update.in-progress.message.type=html
+measurement.update.in-progress.message.text=Updating measurements...
+measurement.update.in-progress.level=info
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
