--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -81,6 +81,12 @@ measurement.update.failed.level=error
 measurement.update.in-progress.message.type=html
 measurement.update.in-progress.message.text=Updating measurements...
 measurement.update.in-progress.level=info
+profile.oidc.link.success.message.type=html
+profile.oidc.link.success.message.text=Account is now linked with your OpenID profile.
+profile.oidc.link.success.level=success
+profile.oidc.link.failed.message.type=html
+profile.oidc.link.failed.message.text=Linking your profile failed: <strong>{0}</strong>.
+profile.oidc.link.failed.level=error
 sample-batch.deleted.success.message.type=html
 sample-batch.deleted.success.message.text=Deleted sample batch <strong>{0}</strong>.
 sample-batch.deleted.success.level=success
