Finalise new measurement property

--- a/user-interface/src/main/resources/messages/toast-notifications.properties
+++ b/user-interface/src/main/resources/messages/toast-notifications.properties
@@ -103,7 +103,7 @@ task.in-progress.message.type=html
 task.in-progress.message.text=<strong>{0}</strong> in progress ...
 task.in-progress.level=info
 task.failed.message.type=html
-task.failed.message.text=<strong>{0}</strong> failed!
+task.failed.message.text=<strong>{0}</strong> failed! Please contact <a href="mailto:support@qbic.zendesk.com">QBiC support</a>.
 task.failed.level=error
 project.updated.success.message.type=html
 project.updated.success.message.text=Updated project successfully.
