add mock openbis connector
for when testing you do not want to use the openbis connector.

--- a/user-interface/pom.xml
+++ b/user-interface/pom.xml
@@ -330,7 +330,9 @@
         </plugins>
       </build>
     </profile>
-
+    <profile>
+      <id>development</id>
+    </profile>
     <profile>
       <id>it</id>
       <build>
