Add configurable delays for announcements

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -170,6 +170,9 @@ spring.devtools.restart.enabled=true
 spring.mustache.check-template-location=false
 #EHCache used by spring security ACL to cache ACEs
 spring.cache.jcache.config=classpath:ehcache3.xml
+announcement.initial-delay=${ANNOUNCEMENTS_INITIAL_DELAY:0s}
+announcement.refresh-interval=${ANNOUNCEMENTS_REFRESH_INTERVAL:2h}
+
 ###############################################################################
 ################### Token Generation ##########################################
 qbic.access-token.salt=${ACCESS_TOKEN_SALT:1213213213921093213982103821983928139218390281930812092189}
