Introduce max cap for virtual threads for reacive methods

--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -32,6 +32,16 @@ qbic.data-management.datasource.username=${DATAMANAGEMENT_DB_USER_NAME:myusernam
 qbic.data-management.datasource.password=${DATAMANAGEMENT_DB_USER_PW:astrongpassphrase!}
 qbic.data-management.datasource.ddl-auto=${DATAMANAGEMENT_DB_DDL_AUTO:none}
 
+# Hikari
+qbic.data-management.datasource.hikari.maximum-pool-size=20
+qbic.data-management.datasource.hikari.minimum-idle=5
+qbic.data-management.datasource.hikari.connection-timeout=15000
+qbic.data-management.datasource.hikari.validation-timeout=3000
+qbic.data-management.datasource.hikari.max-lifetime=1700000
+qbic.data-management.datasource.hikari.keepalive-time=300000
+# Uncomment for debugging hikari config
+#logging.level.com.zaxxer.hikari=DEBUG
+
 ### Hibernate for the default datasource
 spring.jpa.database=mysql
 # Can be enabled for debugging purposes, not recommended in production
