--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -40,8 +40,10 @@ qbic.data-management.datasource.hikari.validation-timeout=3000
 qbic.data-management.datasource.hikari.max-lifetime=1700000
 qbic.data-management.datasource.hikari.keepalive-time=300000
 # Uncomment for debugging hikari config
-#logging.level.com.zaxxer.hikari=DEBUG
-
+logging.level.com.zaxxer.hikari=DEBUG
+debug=true
+logging.level.org.springframework.data.jpa=DEBUG
+logging.level.org.springframework.data.repository.config=DEBUG
 ### Hibernate for the default datasource
 spring.jpa.database=mysql
 # Can be enabled for debugging purposes, not recommended in production
