--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -101,6 +101,8 @@ openbis.datasource.dss.url=${OPENBIS_DSS_URL:}
 vaadin.allowed-packages=com.vaadin,org.vaadin,dev.hilla,life.qbic
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=false
+# application.properties
+vaadin.sessionLockCheckStrategy=${VAADIN_LOCK_STRATEGY: log}    # or THROW for more restriction and fail fast strategy (e.g. during development)
 ###############################################################################
 ################### Routing ###################################################
 # route for mail confirmation consumption
