--- a/user-interface/src/main/resources/application.properties
+++ b/user-interface/src/main/resources/application.properties
@@ -40,7 +40,7 @@ qbic.data-management.datasource.hikari.validation-timeout=3000
 qbic.data-management.datasource.hikari.max-lifetime=1700000
 qbic.data-management.datasource.hikari.keepalive-time=300000
 # Uncomment for debugging hikari config
-logging.level.com.zaxxer.hikari=DEBUG
+logging.level.com.zaxxer.hikari=INFO
 
 ### Hibernate for the default datasource
 spring.jpa.database=mysql
